--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+*{
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 1.6;
     color: #333;
+    
 }
+
 
 header {
     background-size: cover;
